# Opencode-AI-agent-Workflow

./: .gitignore  README.md  pyproject.toml  test_secure_config.py
.leeway/: crontab.json  hooks.json  settings.json  tools.json
.leeway/editor/projects/: projects.json
.leeway/skills/api-design/: SKILL.md
.leeway/skills/code-health/: SKILL.md
.leeway/skills/code-review/: SKILL.md
.leeway/skills/code-review/references/: checklist.md
.leeway/skills/coding-standards/: SKILL.md
.leeway/skills/github-search/: SKILL.md
.leeway/skills/pr-review/: SKILL.md
.leeway/skills/research-assistant/: SKILL.md
.leeway/skills/security-audit/: SKILL.md
.leeway/skills/security-audit/references/: owasp.md
.leeway/skills/security-scan/: SKILL.md
.leeway/skills/workflow-handler/: SKILL.md
.leeway/tools/: calculate.py
.leeway/workflows/: api-design.yaml  code-health.yaml  github-search.yaml  pr-review.yaml  research-assistant.yaml  security-scan.yaml  test-wf.yaml
docs/: integration-design.md  integration-todo.md  project-architecture.md
examples/: test-daemon.py  test-mcp.py  test-performance.py  test-scheduler.py  test-streaming.py  test-workflow.ts
src/leeway_integration/: __init__.py  error.py  protocol.py
src/leeway_integration/daemon/: __init__.py  core.py
src/tools/: index.ts  workflow-daemon.ts  workflow.ts
