[project]
name = "leeway-integration"
version = "0.1.0"
description = "OpenCode × Leeway Integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "leeway>=0.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
crypto = [
    "cryptography>=41.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configure hatch for src layout package
[tool.hatch.build.targets.wheel]
packages = ["src.leeway_integration"]

[project.scripts]
leeway-daemon = "leeway_integration.daemon.core:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]